--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.application.name=teste
-spring.datasource.username=postgres
-spring.datasource.password=hades
-spring.datasource.url=jdbc:postgresql://localhost:5432/teste
+spring.datasource.username=admin
+spring.datasource.password=6a9c5fnvUyGn6ESRu9iYYdG5VAT5mPjJ
+spring.datasource.url=jdbc:postgresql://dpg-d1attkgdl3ps73e3br30-a:5432/dietadb_w15l
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
